skel-http/kube/skel-http-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skel-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skel-2
  template:
    metadata:
      labels:
        app: skel-2
    spec:
      containers:
      - name: skel-http-2
        image: syspulse/skel-http:0.0.2
        args: ["start","--uri","/service"]
        imagePullPolicy: Always
