skel-http/kube/skel-http-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: skel-http-2
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: skel-2
