skel-http/kube/skel-http-service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: skel-http-3
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: skel-3
