skel-http/kube/skel-http-ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skel-http-ingress-1
  labels:
    app: skel
spec:
  rules:
    - host: k1.home.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skel-http-1
                port:
                  number: 8080
