skel-http/kube/skel-http-ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skel-http-ingress-3
  labels:
    app: skel
spec:
  rules:
    - host: k1.home.net
      http:
        paths:
          - path: /api/v2/service
            pathType: Prefix
            backend:
              service:
                name: skel-http-3
                port:
                  number: 8080
